[package]
name = "dummy-xdp-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
aya.workspace = true
anyhow.workspace = true
xdp-dispatcher = { path = "../xdp-dispatcher" }
uuid = { version = "1.18.1", features = ["v4"] }
clap = { version = "4.5.48", features = ["derive"] }

[build-dependencies]
ebpf-builder = { path = "../ebpf-builder" }
dummy-ebpf = { path = "../dummy-ebpf" }