[package]
name = "shredcaster"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
aya.workspace = true
anyhow.workspace = true
clap = { version = "4.5.48", features = ["derive"] }
arrayvec.workspace = true
futures.workspace = true
crossbeam-channel = "0.5.15"
# agave-xdp = "3.0.7"
crossterm = "0.29.0"
# xdp-dispatcher = { path = "../xdp-dispatcher" }
uuid = { version = "1.18.1", features = ["v4"] }
agave-xdp = { git = "https://github.com/Overclock-Validator/agave.git", rev = "420b39cbb40618355802f30cf3afb2ea79990652" }
nix = { version = "0.30.1", features = ["net"] }

[build-dependencies]
ebpf-builder = { path = "../ebpf-builder" }
turbine-ebpf-spy = { path = "../turbine-ebpf-spy" }
