[package]
name = "shredcaster"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
aya.workspace = true
anyhow.workspace = true
clap = { version = "4.5.48", features = ["derive"] }
arrayvec.workspace = true
futures.workspace = true
crossbeam-channel = "0.5.15"
agave-xdp = { version = "3.0.12", features = ["agave-unstable-api"] }
crossterm = "0.29.0"
solana-ledger = { version = "3.0.12", features = ["agave-unstable-api"] }
wtransport = "0.6.1"
serde = "1.0.228"
sonic-rs = "0.3"
figment = { version = "0.10.19", features = ["toml"] }
notify = "8.1.0"

[build-dependencies]
cargo_metadata = "0.23.0"
anyhow.workspace = true
turbine-ebpf-spy = { path = "../turbine-ebpf-spy" }
